--- a/view/index.html
+++ b/view/index.html
@@ -24,7 +24,7 @@
                     </ul>
                     <input type="text" class="search-txt" />
                 </div>
-                <input type="submit" class="search-btn" value="搜索" />
+                <input type="submit" class="search-btn iconfont" value="&#xe60e;" />
             </div>
     </div>
     <div class="nav">
@@ -63,9 +63,11 @@
     <div class="warp">
         <div class="md-warp new-goods">
             <div class="floor-title">
-                <a class="more" href="#">更多<b></b></a>
+                <a class="more" href="#">更多<b class="iconfont">&#xe611;</b></a>
                 <div class="new-goods-tab">
-                    <a class="goods-tab-item goods-tab-item-cur" href="#">最新上线</a><span>|</span><a class="goods-tab-item" href="#">新品预告</a>
+                    <a class="goods-tab-item goods-tab-item-cur" href="#">最新上线 <b></b></a>
+                    <span>|</span>
+                    <a class="goods-tab-item" href="#">新品预告<b></b></a>
                 </div>
             </div>
             <div class="new-goods-cont">
@@ -132,7 +134,7 @@
 
         <div class="md-warp fashion floor-md">
             <div class="floor-title">
-                <a class="more" href="#">更多<b></b></a>
+                <a class="more" href="#">更多<b class="iconfont">&#xe611;</b></a>
                 <div class="floor-title-item">
                     <span class="title-item-icon"></span>
                     <h2>潮流穿搭</h2>
@@ -253,7 +255,7 @@
 
         <div class="md-warp life floor-md">
             <div class="floor-title">
-                <a class="more" href="#">更多<b></b></a>
+                <a class="more" href="#">更多<b class="iconfont">&#xe611;</b></a>
                 <div class="floor-title-item">
                     <span class="title-item-icon"></span>
                     <h2>生活百货</h2>
@@ -374,7 +376,7 @@
 
         <div class="md-warp infant-mom floor-md">
             <div class="floor-title">
-                <a class="more" href="#">更多<b></b></a>
+                <a class="more" href="#">更多<b class="iconfont">&#xe611;</b></a>
                 <div class="floor-title-item">
                     <span class="title-item-icon"></span>
                     <h2>母婴用品</h2>
@@ -499,12 +501,12 @@
             <div class="expert-save">
                 <div class="floor-title">
                     <div class="expert-save-tab">
-                        <a href="#">总排行榜</a>
+                        <a href="#">总排行榜<b></b></a>
                         <span>|</span>
-                        <a href="#" class="expert-save-tab-cur">月排行榜</a>
+                        <a href="#" class="expert-save-tab-cur">月排行榜<b></b></a>
                     </div>
                     <div class="floor-title-item">
-                        <span class="title-item-icon"></span>
+                        <span class="title-item-icon iconfont">&#xe610;</span>
                         <h2>省钱达人</h2>
                     </div>
                 </div>
@@ -513,56 +515,56 @@
                         <ul>
                             <li>
                                <a href="#">
-                                   <span class="save-icon"></span>
+                                   <span class="save-icon save-icon-red iconfont">&#xe60f;<b>1</b></span>
                                    <img width="72" height="72" src="#">
-                                   <span class="save-name">jiaying_lun</span>
-                                   <span>商品总数：<b class="save-num">6880个</b></span>
-                                   <span class="save-money">省钱：<sub>￥</sub><b>200,000</b><sup>+</sup></span>
+                                   <span class="save-info save-name">jiaying_lun</span>
+                                   <span class="save-info">商品总数：<b class="save-num">6880个</b></span>
+                                   <span class="save-info save-money">省钱：<sub>￥</sub><b>200,000</b><sup>+</sup></span>
                                </a> 
                             </li>
                             <li>
                                <a href="#">
-                                   <span class="save-icon"></span>
+                                   <span class="save-icon save-icon-red iconfont">&#xe60f;<b>2</b></span>
                                    <img width="72" height="72" src="#">
-                                   <span class="save-name">jiaying_lun</span>
-                                   <span>商品总数：<b class="save-num">6880个</b></span>
-                                   <span class="save-money">省钱：<sub>￥</sub><b>200,000</b><sup>+</sup></span>
+                                   <span class="save-info save-name">jiaying_lun</span>
+                                   <span class="save-info">商品总数：<b class="save-num">6880个</b></span>
+                                   <span class="save-info save-money">省钱：<sub>￥</sub><b>200,000</b><sup>+</sup></span>
                                </a> 
                             </li> 
                             <li>
                                <a href="#">
-                                   <span class="save-icon"></span>
+                                   <span class="save-icon save-icon-red iconfont">&#xe60f;<b>3</b></span>
                                    <img width="72" height="72" src="#">
-                                   <span class="save-name">jiaying_lun</span>
-                                   <span>商品总数：<b class="save-num">6880个</b></span>
-                                   <span class="save-money">省钱：<sub>￥</sub><b>200,000</b><sup>+</sup></span>
+                                   <span class="save-info save-name">jiaying_lun</span>
+                                   <span class="save-info">商品总数：<b class="save-num">6880个</b></span>
+                                   <span class="save-info save-money">省钱：<sub>￥</sub><b>200,000</b><sup>+</sup></span>
                                </a> 
                             </li>
                             <li>
                                <a href="#">
-                                   <span class="save-icon"></span>
+                                   <span class="save-icon iconfont">&#xe60f;<b>4</b></span>
                                    <img width="72" height="72" src="#">
-                                   <span class="save-name">jiaying_lun</span>
-                                   <span>商品总数：<b class="save-num">6880个</b></span>
-                                   <span class="save-money">省钱：<sub>￥</sub><b>200,000</b><sup>+</sup></span>
+                                   <span class="save-info save-name">jiaying_lun</span>
+                                   <span class="save-info">商品总数：<b class="save-num">6880个</b></span>
+                                   <span class="save-info save-money">省钱：<sub>￥</sub><b>200,000</b><sup>+</sup></span>
                                </a> 
                             </li>
                             <li>
                                <a href="#">
-                                   <span class="save-icon"></span>
+                                   <span class="save-icon iconfont">&#xe60f;<b>5</b></span>
                                    <img width="72" height="72" src="#">
-                                   <span class="save-name">jiaying_lun</span>
-                                   <span>商品总数：<b class="save-num">6880个</b></span>
-                                   <span class="save-money">省钱：<sub>￥</sub><b>200,000</b><sup>+</sup></span>
+                                   <span class="save-info save-name">jiaying_lun</span>
+                                   <span class="save-info">商品总数：<b class="save-num">6880个</b></span>
+                                   <span class="save-info save-money">省钱：<sub>￥</sub><b>200,000</b><sup>+</sup></span>
                                </a> 
                             </li>
                             <li>
                                <a href="#">
-                                   <span class="save-icon"></span>
+                                   <span class="save-icon iconfont">&#xe60f;<b>6</b></span>
                                    <img width="72" height="72" src="#">
-                                   <span class="save-name">jiaying_lun</span>
-                                   <span>商品总数：<b class="save-num">6880个</b></span>
-                                   <span class="save-money">省钱：<sub>￥</sub><b>200,000</b><sup>+</sup></span>
+                                   <span class="save-info save-name">jiaying_lun</span>
+                                   <span class="save-info">商品总数：<b class="save-num">6880个</b></span>
+                                   <span class="save-info save-money">省钱：<sub>￥</sub><b>200,000</b><sup>+</sup></span>
                                </a> 
                             </li> 
                         </ul>
@@ -575,9 +577,9 @@
 
             <div class="expert-bask">
                 <div class="floor-title">
-                    <a class="more" href="#">更多<b></b></a>
+                    <a class="more" href="#">更多<b class="iconfont">&#xe611;</b></a>
                     <div class="floor-title-item">
-                        <span class="title-item-icon"></span>
+                        <span class="title-item-icon iconfont">&#xe616;</span>
                         <h2>晒单达人</h2>
                     </div>
                 </div>
@@ -618,11 +620,18 @@
     </div>
     <div class="footer">
         <div class="md-warp footer-cont">
-            <div class="f-contact"></div>
+            <div class="f-contact">
+                <span class="contact-icon">
+                    <b class="iconfont">&#xe60d;</b>
+                </span>  
+                <span class="question">有问题吗？请联系我们的客服</span>  
+                <a class="line-kefu" href="#">在线客服</a>
+                <span class="emall">mall@shikee.com</span>
+            </div>
             <div class="f-strength">
                 <div class="f-strength-item">
                     <div class="f-strength-item-up">
-                        <i></i>
+                        <b class="iconfont">&#xe612;</b>
                         <span>每日更新</span>
                         <p>每天10点、20点准时上线</p>   
                     </div>
@@ -637,7 +646,7 @@
                 </div>
                 <div class="f-strength-item">
                     <div class="f-strength-item-up">
-                        <i></i>
+                        <b class="iconfont">&#xe613;</b>
                         <span>消费保障</span>
                         <p>商家预存足额保证金</p>   
                     </div>
@@ -652,7 +661,7 @@
                 </div>
                 <div class="f-strength-item">
                     <div class="f-strength-item-up">
-                        <i></i>
+                        <b class="iconfont">&#xe614;</b>
                         <span>闪电返款</span>
                         <p>每笔闪返50%~90%</p>   
                     </div>
@@ -665,8 +674,55 @@
                         </div>
                     </div>
                 </div>
-
+                <div class="f-strength-item">
+                    <div class="f-strength-item-up">
+                        <b class="iconfont">&#xe615;</b>
+                        <span>品质验证</span>
+                        <p>商家质量层层把关</p>   
+                    </div>
+                    <div class="f-strength-item-sub">
+                        <div class="align">
+                            <span>帮助中心</span>
+                            <a href="#">帮助中心首页</a>
+                            <a href="#">商家流程</a>
+                            <a href="#">买家流程</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="f-strength-item f-last">
+                    <div class="f-strength-item-up">
+                        <i></i>
+                        <span>品质验证</span>
+                        <p>商家质量层层把关</p>   
+                    </div>
+                    <div class="f-strength-item-sub">
+                        <div class="align">
+                            <span>帮助中心</span>
+                            <a href="#">帮助中心首页</a>
+                            <a href="#">商家流程</a>
+                            <a href="#">买家流程</a>
+                        </div>
+                    </div>
+                </div>
             </div>
+        </div>
+        <div class="md-warp f-copyright">
+             <div class="f-c-cont">
+                 <p class="f-c-link">友情链接： <a href="#">聚划算</a><a href="#">网络媒体排名</a></p>
+                 <p class="f-c-copy">
+                     Copyright © 2006-2015 zhonghuasuan.com   版权所有:南宁一站网网络技术有限公司   地址:广西南宁市高新区高新大道62号光辉大厦3楼
+                 </p>
+                 <p class="f-c-link">
+                    桂B2-20110047
+                    <a href="#">桂ICP备07009935号</a>
+                    <a href="#">站长统计</a>
+                    <a href="#">本站由速网科技提供CDN加速</a>
+                 </p>
+                 <p class="f-link-img">
+                     <a href="#"></a>
+                     <a href="#"></a>
+                 </p>
+             </div>   
         </div>
     </div>
 </body>
