--- a/static/src/less/index.less
+++ b/static/src/less/index.less
@@ -1,4 +1,5 @@
 @charset 'utf-8';
+@import "common/module.less";
 .top{
     width: 100%;
     height:27px;
@@ -63,9 +64,10 @@
             border:1px solid #d14141;
             border-left: 0;
             background-color: #dc4c4c;
-            color:#fff;
             cursor: pointer;
             outline:none;
+            font-size: 23px;
+            color:#fff;
         }
     }
 .nav{
@@ -198,11 +200,15 @@
         b{
             display:inline-block;
             margin-left: 3px;
-            width: 14px;
-            height: 14px;
-            background-color: #999;
-            border-radius: 50%;
-            vertical-align: text-bottom;
+            color: #999;
+            font-size: 15px;
+            font-weight: normal;
+        }
+        &:hover{
+            color:#d11414;
+            b{
+                color:#d11414;
+            }
         }
     }
     h2{
@@ -215,7 +221,6 @@
         margin-right: 8px;
         width: 32px;
         height: 30px;
-        background-color: red;
     }
     .floor-en-name{
         font-size: 14px;
@@ -372,6 +377,12 @@
             }
             &-cur {
                 color: #d11414;
+                b{
+                    position:absolute;
+                    top: 25px;
+                    left:29px;
+                    .triangle-top(10, 6, #d11414);
+                }
             }
         }
         span{
@@ -461,12 +472,18 @@
         width: 790px;
         height: 283px;
         overflow: hidden;
+        .title-item-icon{
+            width:16px;
+            font-size: 18px;
+            color:#d11414;
+        }
         &-tab{
             margin-right: 10px;
             float: right;
             font-size: 12px;
             a{
                 display:inline-block;
+                position:relative;
                 color:#333;
                 &:hover{
                     color:#d11414;
@@ -474,6 +491,12 @@
             }
             .expert-save-tab-cur{
                 color:#d11414;
+                b{
+                    position:absolute;
+                    top: 25px;
+                    left:20px;
+                    .triangle-top(10, 6, #d11414);
+                }
             }
             span{
                 display:inline-block;
@@ -498,20 +521,34 @@
                         height:99px;
                     }
                     .save-icon{
+                        position:relative;
                         display:inline-block;
                         margin-right: 10px;
                         float:left;
-                        width:18px;
-                        height:22px;
-                        background-color: #c1c1c1;
+                        width:22px;
+                        height:28px;
+                        line-height: 25px;
+                        font-size: 22px;
+                        color: #8a8a8a;
+                        b{
+                            position:absolute;
+                            top: 1px;
+                            left:7px;
+                            line-height: 15px;
+                            color:#fff;
+                            font-size: 12px;
+                            font-family: arial;
+                            font-weight: normal;
+                        }
                     }
+                    .save-icon-red{color:#d11414;}
                     img{
                         float:left;
                         margin-right: 10px;
-                        border-radius: 3px;
+                        border-radius: 5px;
                         background-color: #bec1c9;
                     }
-                    span{
+                    .save-info{
                         display:inline-block;
                         float:left;
                         width:125px;
@@ -621,6 +658,11 @@
                 }
             }
         }
+        .title-item-icon{
+            width:16px;
+            font-size: 18px;
+            color:#d11414;
+        }
     }
 }
 
@@ -640,7 +682,42 @@
     float: left;
     width: 200px;
     height: 275px;
-    background-color: blue;
+    font-family: \5FAE\8F6F\96C5\9ED1;
+    .contact-icon{
+        display:block;
+        margin: 20px auto 15px;
+        width:110px;
+        height:110px;
+        border-radius: 50%;
+        text-align: center;
+        background-color: #dedede;
+        b{
+            font-size: 72px;
+            font-weight: normal;
+            color:#fff;
+        }
+    }
+    .question{
+        font-size: 14px;
+        color:#888;
+    }
+    .emall,.line-kefu{
+        display:block;
+        margin: 15px auto 0;
+        height:29px;
+        line-height: 29px;
+        border-radius: 10px;
+        font-size: 14px;
+        color:#fff;
+        text-align: center;
+        background-color: #eb4545;
+    }
+    .line-kefu{
+        width:90px;
+    }
+    .emall{
+        width:137px;
+    }
 }
 .f-strength{
     float: left;
@@ -665,6 +742,14 @@
             font-size: 12px;
             color:#888;
         }
+        b{
+            display:block;
+            margin:0 auto 8px;
+            line-height: 49px;
+            color:#ff4254;
+            font-size: 49px;
+            font-weight: normal;
+        }
     }
     .f-strength-item-sub{
         padding-top: 20px;
@@ -687,6 +772,31 @@
         }
         span,a{
             display:block;
+        }
+    }
+    .f-last{
+        width:143px;
+    }
+}
+.f-copyright{
+    padding-top: 30px;
+    height:125px;
+    text-align: center;
+    .f-c-cont{
+        display:inline-block;
+        margin: 0 auto;
+        line-height: 25px;
+        text-align: left;
+        font-size: 12px;
+        color:#888;
+        .f-c-link a{
+            display:inline-block;
+            margin:0 5px;
+            color:#888; 
+        }
+        .f-link-img{
+            margin-top: 20px;
+            a{margin-right: 10px;}
         }
     }
 }
