--- a/static/src/less/header.less
+++ b/static/src/less/header.less
@@ -1,12 +1,11 @@
 @font-face {
   font-family: 'iconfont';
-  src: url('http://at.alicdn.com/t/font_1426845336_2816284.eot'); /* IE9*/
-  src: url('http://at.alicdn.com/t/font_1426845336_2816284.eot?#iefix') format('embedded-opentype'), 
-  url('http://at.alicdn.com/t/font_1426845336_2816284.woff') format('woff'), 
-  url('http://at.alicdn.com/t/font_1426845336_2816284.ttf') format('truetype'), 
-  url('http://at.alicdn.com/t/font_1426845336_2816284.svg#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('//at.alicdn.com/t/font_1427033015_1969814.eot'); /* IE9*/
+  src: url('//at.alicdn.com/t/font_1427033015_1969814.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('//at.alicdn.com/t/font_1427033015_1969814.woff') format('woff'), /* chrome、firefox */
+  url('//at.alicdn.com/t/font_1427033015_1969814.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+  url('//at.alicdn.com/t/font_1427033015_1969814.svg#iconfont') format('svg'); /* iOS 4.1- */
 }
-    
 
 .iconfont{
     font-family:"iconfont" !important;
