--- a/view/index.html
+++ b/view/index.html
@@ -13,7 +13,7 @@
     <div class="header">
             <h1 class="logo">
                 <a href="#">
-                    <img src="#" alt="众划算" />
+                    <img src="/static/src/img/logo.png" alt="" alt="众划算" />
                 </a>
             </h1>
             <div class="search">
@@ -38,7 +38,7 @@
                 <li><a href="#">买家晒单</a></li>
                 <li><a href="#">关于我们</a></li>
             </ul>
-            <a href="#" class="zs-inlet"></a>
+            <a href="#" class="zs-inlet sprite"></a>
         </div>
     </div>
     <div class="banner">
@@ -159,7 +159,7 @@
                     <div class="md-warp-bn-info">
                         <span class="bn-tit bn-max-tit">冬装超值回馈</span>
                         <span class="bn-tit bn-min-tit">男装特惠季</span>
-                        <span class="bn-detail">了解详情</span>
+                        <span class="bn-detail">了解详情<b class="iconfont">&#xe618;</b></span>
                     </div>
                 </a>
                 <a href="#">
@@ -167,7 +167,7 @@
                     <div class="md-warp-bn-info">
                         <span class="bn-tit bn-max-tit">冬装超值回馈</span>
                         <span class="bn-tit bn-min-tit">男装特惠季</span>
-                        <span class="bn-detail">了解详情</span>
+                        <span class="bn-detail">了解详情<b class="iconfont">&#xe618;</b></span>
                     </div>
                 </a>
             </div>
@@ -280,7 +280,7 @@
                     <div class="md-warp-bn-info">
                         <span class="bn-tit bn-max-tit">冬装超值回馈</span>
                         <span class="bn-tit bn-min-tit">男装特惠季</span>
-                        <span class="bn-detail">了解详情</span>
+                        <span class="bn-detail">了解详情<b class="iconfont">&#xe618;</b></span>
                     </div>
                 </a>
                 <a href="#">
@@ -288,7 +288,7 @@
                     <div class="md-warp-bn-info">
                         <span class="bn-tit bn-max-tit">冬装超值回馈</span>
                         <span class="bn-tit bn-min-tit">男装特惠季</span>
-                        <span class="bn-detail">了解详情</span>
+                        <span class="bn-detail">了解详情<b class="iconfont">&#xe618;</b></span>
                     </div>
                 </a>
             </div>
@@ -401,7 +401,7 @@
                     <div class="md-warp-bn-info">
                         <span class="bn-tit bn-max-tit">冬装超值回馈</span>
                         <span class="bn-tit bn-min-tit">男装特惠季</span>
-                        <span class="bn-detail">了解详情</span>
+                        <span class="bn-detail">了解详情<b class="iconfont">&#xe618;</b></span>
                     </div>
                 </a>
                 <a href="#">
@@ -409,7 +409,7 @@
                     <div class="md-warp-bn-info">
                         <span class="bn-tit bn-max-tit">冬装超值回馈</span>
                         <span class="bn-tit bn-min-tit">男装特惠季</span>
-                        <span class="bn-detail">了解详情</span>
+                        <span class="bn-detail">了解详情<b class="iconfont">&#xe618;</b></span>
                     </div>
                 </a>
             </div>
@@ -691,16 +691,12 @@
                 </div>
                 <div class="f-strength-item f-last">
                     <div class="f-strength-item-up">
-                        <i></i>
-                        <span>品质验证</span>
-                        <p>商家质量层层把关</p>   
+                        <span class="sprite baoyou"></span>  
                     </div>
                     <div class="f-strength-item-sub">
                         <div class="align">
-                            <span>帮助中心</span>
-                            <a href="#">帮助中心首页</a>
-                            <a href="#">商家流程</a>
-                            <a href="#">买家流程</a>
+                            <span class="sprite weinxi"></span>
+                            <span class="weixin-tit">众划算官方微信</span>
                         </div>
                     </div>
                 </div>
