--- a/static/src/css/index.css
+++ b/static/src/css/index.css
@@ -4,6 +4,9 @@
   height: 27px;
   border-bottom: 1px solid #ddd;
 }
+.sprite {
+  background: url(/static/src/img/sprite.png) no-repeat;
+}
 .header {
   margin: 0 auto;
   width: 1190px;
@@ -15,7 +18,6 @@
   float: left;
   width: 395px;
   height: 45px;
-  background: red;
 }
 .search {
   margin-top: 40px;
@@ -74,11 +76,11 @@
   border-bottom: 3px solid #d11414;
 }
 .nav-md {
+  position: relative;
   margin: 0 auto;
   padding-left: 190px;
   width: 1000px;
   background-color: #fcfcfc;
-  overflow: hidden;
 }
 .nav-md ul {
   float: left;
@@ -103,10 +105,14 @@
   background-color: #d11414;
 }
 .nav-md .zs-inlet {
+  position: absolute;
+  right: 0;
+  top: -5px;
   display: block;
   float: right;
   width: 200px;
-  height: 33px;
+  height: 38px;
+  background-position: 0 -72px;
 }
 .banner {
   width: 100%;
@@ -352,8 +358,15 @@
   line-height: 30px;
   font-size: 14px;
   color: #fff;
-  text-indent: 10px;
+  text-indent: 15px;
   background-color: rgba(153, 153, 153, 0.5);
+}
+.md-warp-bn .md-warp-bn-info .bn-detail b {
+  margin-left: 5px;
+  font-weight: normal;
+  font-size: 13px;
+  color: #fff;
+  vertical-align: middle;
 }
 .new-goods .new-goods-tab .goods-tab-item {
   position: relative;
@@ -371,16 +384,6 @@
   position: absolute;
   top: 25px;
   left: 29px;
-  width: 0;
-  height: 0;
-  line-height: 0;
-  overflow: hidden;
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-  border-color: transparent transparent #d11414 transparent;
-  border-style: dashed dashed solid dashed;
-  border-width: 0 5px 6px 5px;
 }
 .new-goods .new-goods-tab span {
   display: inline-block;
@@ -478,16 +481,6 @@
   position: absolute;
   top: 25px;
   left: 20px;
-  width: 0;
-  height: 0;
-  line-height: 0;
-  overflow: hidden;
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-  border-color: transparent transparent #d11414 transparent;
-  border-style: dashed dashed solid dashed;
-  border-width: 0 5px 6px 5px;
 }
 .expert-save-tab span {
   display: inline-block;
@@ -764,8 +757,32 @@
 .f-strength .f-strength-item-sub a {
   display: block;
 }
+.f-strength .f-strength-item-sub .weinxi {
+  display: inline-block;
+  margin-bottom: 0px;
+  width: 99px;
+  height: 99px;
+  background-color: #fff;
+  background-position: -294px -205px;
+}
+.f-strength .f-strength-item-sub .weixin-tit {
+  font-size: 12px;
+  color: #888;
+  text-align: center;
+}
 .f-strength .f-last {
+  position: relative;
   width: 143px;
+  overflow: initial;
+}
+.f-strength .baoyou {
+  position: absolute;
+  top: 10px;
+  left: 20px;
+  display: inline-block;
+  width: 167px;
+  height: 91px;
+  background-position: -5px -214px;
 }
 .f-copyright {
   padding-top: 30px;
