--- a/static/src/less/index.less
+++ b/static/src/less/index.less
@@ -5,6 +5,7 @@
     height:27px;
     border-bottom:1px solid #ddd;
 }
+.sprite{background: url(/static/src/img/sprite.png) no-repeat;}
 
 .header{
     margin:0 auto;
@@ -17,7 +18,6 @@
         float: left;
         width: 395px;
         height: 45px;
-        background:red;
     }
     .search{
         margin-top: 40px;
@@ -76,11 +76,11 @@
     border-bottom: 3px solid #d11414;
 }
 .nav-md{
+        position: relative;
         margin: 0 auto;
         padding-left: 190px;
         width: 1000px;
         background-color: #fcfcfc;
-        overflow: hidden;
        ul{ 
         float:left;
         overflow: hidden;
@@ -104,10 +104,14 @@
         }
    } 
    .zs-inlet{
+        position: absolute;
+        right: 0;
+        top: -5px;
         display: block;
         float: right;
         width: 200px;
-        height:33px;
+        height: 38px;
+        background-position: 0 -72px;
    }
 }
 
@@ -359,8 +363,15 @@
             line-height: 30px;
             font-size: 14px;
             color:#fff;
-            text-indent: 10px;
+            text-indent: 15px;
             background-color: rgba(153, 153, 153, 0.5);
+            b{
+                margin-left: 5px;
+                font-weight: normal;
+                font-size: 13px;
+                color:#fff;
+                vertical-align: middle;
+            }
         }
     }
 }
@@ -773,10 +784,35 @@
         span,a{
             display:block;
         }
+        .weinxi{
+            display:inline-block;
+            margin-bottom: 0px;
+            width: 99px;
+            height: 99px;
+            background-color: #fff;
+            background-position: -294px -205px;
+        }
+        .weixin-tit{
+            font-size: 12px;
+            color:#888;
+            text-align: center;
+        }
     }
     .f-last{
+        position: relative;
         width:143px;
+        overflow:initial;
     }
+    .baoyou{
+        position: absolute;
+        top: 10px;
+        left:20px;
+        display:inline-block;
+        width: 167px;
+        height: 91px;
+        background-position: -5px -214px;
+    }
+
 }
 .f-copyright{
     padding-top: 30px;
