--- a/static/src/less/index.less
+++ b/static/src/less/index.less
@@ -164,7 +164,19 @@
         top: -36px;
         width: 190px;
         height: 36px;
+        line-height: 36px;
         background-color: #970b0b;
+        color:#fff;
+        font-size: 16px;
+        font-family: \5FAE\8F6F\96C5\9ED1;
+        font-weight: normal;
+        .iconfont{
+            float:left; 
+            display:inline-block;
+            margin-left: 38px;
+            margin-right: 10px;
+            font-size: 16px;
+        }
     }
 }
 .small-banner{
@@ -315,6 +327,12 @@
                     color:#d11414;
                 }
             }
+            b{
+                margin-right: 5px;
+                display:inline-block;
+                font-weight: normal;
+                color:#555;
+            }
         }
     }  
 }
@@ -439,6 +457,9 @@
 .fashion{
     .floor-title{
         border-color: #fa8496;
+        .title-item-icon{
+            background-position: -1px -151px;
+        }
     }
     .md-warp-sidebar{
         ul{
@@ -450,6 +471,9 @@
 .life{
     .floor-title{
         border-color: #cea057;
+        .title-item-icon{
+            background-position: -73px -151px;
+        }
     }
     .md-warp-sidebar{
         ul{
@@ -461,6 +485,9 @@
 .infant-mom{
     .floor-title{
         border-color: #8790c1;
+        .title-item-icon{
+            background-position: -145px -152px;
+        }
     }
     .md-warp-sidebar{
         ul{
