--- a/view/index.html
+++ b/view/index.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="sider">
-                <h2 class="sider-title"></h2>
+                <h2 class="sider-title"><span class="iconfont">&#xe61a;</span>全部商品分类</h2>
             </div>
             <div class="small-banner"></div>            
         </div>
@@ -136,7 +136,7 @@
             <div class="floor-title">
                 <a class="more" href="#">更多<b class="iconfont">&#xe611;</b></a>
                 <div class="floor-title-item">
-                    <span class="title-item-icon"></span>
+                    <span class="title-item-icon sprite"></span>
                     <h2>潮流穿搭</h2>
                     <span class="line">/</span>
                     <span class="floor-en-name">Fashion dress</span>
@@ -147,10 +147,10 @@
                     <img src="/static/src/img/sbn.jpg">
                 </a>
                 <ul>
-                    <li><a href="#">潮流女装</a></li>    
-                    <li><a href="#">精品男装</a></li>    
-                    <li><a href="#">鞋子箱包</a></li>    
-                    <li><a href="#">时尚配饰</a></li>    
+                    <li><a href="#"><b class="iconfont">&#xe600;</b>潮流女装</a></li>    
+                    <li><a href="#"><b class="iconfont">&#xe601;</b>精品男装</a></li>    
+                    <li><a href="#"><b class="iconfont">&#xe602;</b>鞋子箱包</a></li>    
+                    <li><a href="#"><b class="iconfont">&#xe605;</b>时尚配饰</a></li>    
                 </ul>
             </div>
             <div class="md-warp-bn">
@@ -257,7 +257,7 @@
             <div class="floor-title">
                 <a class="more" href="#">更多<b class="iconfont">&#xe611;</b></a>
                 <div class="floor-title-item">
-                    <span class="title-item-icon"></span>
+                    <span class="title-item-icon sprite"></span>
                     <h2>生活百货</h2>
                     <span class="line">/</span>
                     <span class="floor-en-name">Department of life</span>
@@ -268,10 +268,10 @@
                     <img src="/static/src/img/sbn.jpg">
                 </a>
                 <ul>
-                    <li><a href="#">美食特产</a></li>    
-                    <li><a href="#">数码家电</a></li>    
-                    <li><a href="#">家居日用</a></li>    
-                    <li><a href="#">综合商品</a></li>    
+                    <li><a href="#"><b class="iconfont">&#xe606;</b>美食特产</a></li>    
+                    <li><a href="#"><b class="iconfont">&#xe604;</b>数码家电</a></li>    
+                    <li><a href="#"><b class="iconfont">&#xe603;</b>家居日用</a></li>    
+                    <li><a href="#"><b class="iconfont">&#xe609;</b>综合商品</a></li>    
                 </ul>
             </div>
             <div class="md-warp-bn">
@@ -378,7 +378,7 @@
             <div class="floor-title">
                 <a class="more" href="#">更多<b class="iconfont">&#xe611;</b></a>
                 <div class="floor-title-item">
-                    <span class="title-item-icon"></span>
+                    <span class="title-item-icon sprite"></span>
                     <h2>母婴用品</h2>
                     <span class="line">/</span>
                     <span class="floor-en-name">Maternal and child supplies</span>
@@ -389,10 +389,10 @@
                     <img src="/static/src/img/sbn.jpg">
                 </a>
                 <ul>
-                    <li><a href="#">美食特产</a></li>    
-                    <li><a href="#">数码家电</a></li>    
-                    <li><a href="#">家居日用</a></li>    
-                    <li><a href="#">综合商品</a></li>    
+                    <li><a href="#"><b class="iconfont">&#xe60a;</b>婴童服装</a></li>    
+                    <li><a href="#"><b class="iconfont">&#xe608;</b>婴幼用品</a></li>    
+                    <li><a href="#"><b class="iconfont">&#xe60b;</b>早教玩具</a></li>    
+                    <li><a href="#"><b class="iconfont">&#xe60c;</b>孕产新妈</a></li>    
                 </ul>
             </div>
             <div class="md-warp-bn">
